--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -2,12 +2,11 @@
 
 name: 'GitHub Workflow Demo'
 
-on: 
-  workflow_dispatch:
+on: [push]
 
 jobs:
   sayHello:
-    runs-on: 
+    runs-on: ubuntu-latest
     steps: 
     - name: runscript-to-say-hello
       run:  echo "Howdy GitHub Actions"
