--- a/.github/workflows/third_env.yml
+++ b/.github/workflows/third_env.yml
@@ -15,14 +15,14 @@ jobs:
       steps:
       - name: Steps for build variable
         run: |
-          echo "Running step variable ${{env.STEP_NAME}}"
+          echo "Running step variable ${{env.STEP_NAME}},${{env.STEP_VERSION}}"
         env:
           STEP_NAME: "stepvariable"
           STEP_VERSION: "1.0.2"
-          
+
     second_build:
         runs-on: ubuntu-latest
         steps:
             - name: Steps for build variable
               run: |
-                echo "calling global ${{env.GLOBAL_NAME}}"
+                echo "calling global ${{env.GLOBAL_NAME}},${{env.GLOBAL_VERSION}}"
