--- a/.github/workflows/six_secret.yml
+++ b/.github/workflows/six_secret.yml
@@ -9,4 +9,4 @@ jobs:
 
     steps:
         - name: Fetching secrets
-          run: echo "My Secret ${{secret.ACTION_SECRET}}"
+          run: echo "My Secret ${{secrets.ACTION_SECRET}}"
