--- a/.github/workflows/eight_step_jobs_var.yml
+++ b/.github/workflows/eight_step_jobs_var.yml
@@ -25,6 +25,15 @@ jobs:
         echo variableName: ${{ env.variableName }} 
         echo var1_name: ${{ steps.var_source_step.outputs.var1_name }} 
         echo var2_date: ${{ steps.var_source_step.outputs.var2_date }}
+
+    - name: Set output
+      run: echo "{name}={value}" >> $GITHUB_OUTPUT
+    
+    - name: Get-output
+      run: |
+        echo "Printing the values"
+        echo variableName: ${{ env.name }} 
+
   job1:
     runs-on: windows-latest
     
