--- a/.github/workflows/eight_step_jobs_var.yml
+++ b/.github/workflows/eight_step_jobs_var.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Get-output
       run: |
         echo "Printing the values"
-        echo variableName: ${{ env.name }} 
+        echo "${{ env.name }}"
 
   job1:
     runs-on: windows-latest
