--- a/.github/workflows/eight_step_jobs_var.yml
+++ b/.github/workflows/eight_step_jobs_var.yml
@@ -26,13 +26,13 @@ jobs:
         echo var1_name: ${{ steps.var_source_step.outputs.var1_name }} 
         echo var2_date: ${{ steps.var_source_step.outputs.var2_date }}
 
-    - name: Set output
-      run: echo "{name}={value}" >> $GITHUB_OUTPUT
+    - name: Set output with new syntax
+      run: echo "date_var=$(date +'%Y-%m-%d-%H-%M')" >> $GITHUB_OUTPUT
     
     - name: Get-output
       run: |
-        echo "Printing the values"
-        echo "${{ env.name }}"
+        echo "Printing the values with new syntax"
+        echo "${{ env.date_var }}"
 
   job1:
     runs-on: windows-latest
@@ -57,3 +57,13 @@ jobs:
           echo "Printing the values"
           echo output1: ${{needs.job1.outputs.output1}}
           echo output2: ${{needs.job1.outputs.output2}}
+      - id: step2
+        run: echo "test_job=ImportantValue1" >>$GITHUB_OUTPUT
+
+  jobs3:
+    runs-on: ubuntu-latest
+    needs: job2
+    steps:
+      - run: |
+          echo "Printing the values from new syntax"
+          echo output1: ${{env.test_job}}
