--- a/.github/workflows/01_sample_echo.yml
+++ b/.github/workflows/01_sample_echo.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: 01_sample_echo
 
 # Controls when the workflow will run
 on:
